fix: flex-wrap buttons for smaller devices

--- a/src/styles/_buttons.scss
+++ b/src/styles/_buttons.scss
@@ -11,6 +11,7 @@
 .btn-group {
   display: flex;
   gap: var(--space-xs);
+  flex-wrap: wrap;
 }
 
 .btn {
